--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Service Now Linker",
-  "version": "1.1",
+  "name": "UW Connect Linker",
+  "version": "1.0",
   "manifest_version": 2,
   "description": "Turns each Service Now number into a link to the SN page.",
   "content_scripts": [{
